--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,7 +29,7 @@
     "@types/leaflet": "^1.9.21",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.575.0",
-    "next": "14.2.3",
+    "next": "^14.2.14",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-markdown": "9.0.1",
